# microchat

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  业务系统如何防重名功能.md
chatserver/: Cargo.toml
chatserver/src/: lib.rs  main.rs
chatserver/src/base/: cfg.rs  mod.rs
chatserver/src/base/singleton/: db.rs
chatserver/src/transport/: api.rs
dbtools/: Cargo.toml  README.md
dbtools/src/: README.md  dbtools.rs  lib.rs  m_01_create_user.rs  m_02_create_user_relationship.rs
lechat-dbtools/src/: lib.rs  m_03_create_chatmsg.rs  utils.rs
lechat-server/: Cargo.toml
lechat-server/chatserver/: Cargo.toml  build.rs
lechat-server/chatserver/config/: chatserver.yaml
lechat-server/chatserver/src/: error.rs  main.rs
lechat-server/chatserver/src/base/: log.rs  mod.rs  response.rs
lechat-server/chatserver/src/base/singleton/: db.rs
lechat-server/chatserver/src/base/transaction/: sea.rs
lechat-server/chatserver/src/biz/: error.rs  mod.rs
lechat-server/chatserver/src/components/: mysql.rs  redis.rs
lechat-server/chatserver/src/data/: user.rs
lechat-server/chatserver/src/db/: mod.rs
lechat-server/chatserver/src/db/entity/: user.rs
lechat-server/chatserver/src/db/entity/mircochat/: prelude.rs  user.rs
lechat-server/chatserver/src/interface/: api.rs  mod.rs  user.rs
lechat-server/chatserver/src/network/stubs/: mod.rs  user.rs
lechat-server/chatserver/src/service/: checker.rs  user_mgr.rs
lechat-server/fileserver/: Cargo.toml
lechat-server/imageserver/: Cargo.toml
libserver/: .gitignore  Cargo.toml
libserver/chatserver/: Cargo.toml  build.rs
libserver/chatserver/config/: chatserver.yaml
libserver/chatserver/docker/: chatserver.dockerfile
libserver/chatserver/src/: error.rs  lib.rs  main.rs
libserver/chatserver/src/base/: app_state.rs  config.rs  log.rs  response.rs
libserver/chatserver/src/base/transaction/: mod.rs
libserver/chatserver/src/biz/: user.rs
libserver/chatserver/src/components/: mod.rs  redis.rs
libserver/chatserver/src/db/entity/mircochat/: chat_msg.rs  mod.rs  user_relation_ship.rs
libserver/chatserver/src/db/repository/: user.rs  user0.rs
libserver/chatserver/src/interface/: mod.rs  response.rs  user.rs  user_mgr.rs
libserver/chatserver/src/network/protos/: chatmsg.proto  user.proto
libserver/chatserver/src/network/stubs/: chatmsg.rs  mod.rs
libserver/chatserver/src/service/: checker.rs  mod.rs  user.rs  user_mgr0.rs
