[package]
name = "dbtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dbtools"
path = "src/dbtools.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
chrono.workspace = true
sea-orm-migration = { version = "1.0.0", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
