[workspace]
resolver = "2"
members = ["chatserver", "fileserver", "imgserver", "library"]

[workspace.dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
anyhow = "1.0.89"
async-trait = "0.1.81"
bytes = "1.7.1"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
fred = "9.2.1"
humantime-serde = "1.1.1"
mime = "0.3.17"
once_cell = "1.19.0"
async_once = "0.2.6"
protobuf = "3.5.1"
sea-orm = { version = "0.12.15", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_with = "3.9.0"
shaku = "0.6.2"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["macros", "serde"] }
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["time", "chrono", "local-time", "env-filter"] }
uuid = { version = "1.10.0", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }
